1. Метод .of [#70623 #208085]